Added swagger doc
